<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.resume.fragments.infogathering.AddImageFragment">

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/button_shape1"
        android:text="@string/crop"
        android:layout_margin="3dp"
        android:textColor="#ffffff"
        android:textStyle="bold" />


    <com.example.resume.shapes.Circle
        android:id="@+id/cropView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/button_save"
        android:layout_below="@+id/change_image"

        android:background="@android:color/transparent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@color/colorAccent"
            android:contentDescription="@string/cropping_image_view"
            android:scaleType="centerCrop" />
    </com.example.resume.shapes.Circle>

    <Button
        android:id="@+id/change_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_shape1"
        android:text="@string/change"
        android:textColor="#ffffff"
        android:layout_margin="3dp"
        android:textStyle="bold" />
</RelativeLayout>
