<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/ad_place_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/ad_unified" />
    </FrameLayout>

    <TextView
        android:id="@+id/txt_dia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"

        android:text="Do you want to exit ?"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/yes"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/no"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
        <Button
            android:id="@+id/btn_ratee"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="@string/rate_us"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />


    </LinearLayout>

</LinearLayout>